--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "jest-expo": "~20.0.0",
+    "jest-expo": "~21.0.0",
     "react-native-scripts": "1.3.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
@@ -25,8 +25,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^20.0.0",
+    "expo": "^21.0.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.47.0"
+    "react-native": "^0.48.0",
+    "react-native-storage": "^0.2.2"
   }
 }
