--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "auth0-js": "^8.12.0",
     "expo": "^21.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.0",
