--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "eslint": "^4.7.2",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
     "jest-expo": "~21.0.0",
     "react-native-scripts": "1.3.1",
@@ -29,6 +29,8 @@
     "expo": "^21.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.0",
+    "react-native-branch": "^2.0.0-beta.3",
+    "react-native-gesture-handler": "^1.0.0-alpha.22",
     "react-native-storage": "^0.2.2"
   }
 }
