--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
-    "jest-expo": "~21.0.0",
-    "react-native-scripts": "1.3.1",
+    "jest-expo": "^32.0.0",
+    "react-native-scripts": "^2.0.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -25,10 +25,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "auth0-js": "^8.12.0",
-    "expo": "^21.0.0",
+    "auth0-js": "^9.8.2",
+    "expo": "^21.0.3",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.48.0",
+    "react-native": "^0.57.8",
     "react-native-branch": "^2.0.0-beta.3",
     "react-native-gesture-handler": "^1.0.0-alpha.22",
     "react-native-storage": "^0.2.2"
